# MajaAI-Chatbot

./: .env  README.md  pyproject.toml  requirements.txt
app/: main.py
app/api/: chat.py  chat_rag.py  evaluate.py  evaluate_rag.py  ingest.py
app/core/: config.py
app/modules/graph/: workflow.py
app/modules/graph/nodes/: lapor.py  main_router.py  rag.py  ticket.py
app/modules/graph/states/: chat_state.py
app/modules/ingestion/: indexer.py  ingestion_pipeline.py  loader.py  splitter.py
app/modules/rag/: docstore.py  rag_pipeline.py  retriever.py  vectorstore.py
app/prompts/: prompt-v1.yaml
app/prompts/v1/: rag.yaml  router.yaml
app/schemas/: evaluate_schema.py  ingest_schema.py
app/services/: embbedding.py  llm.py  prompt.py
app/utils/: document_serializer.py  parser.py  text_preprocessing.py
data/: stopwords.txt
data/bm25-index/: bm25-index-v1.pkl  bm25-index-v10.pkl  bm25-index-v2.pkl  bm25-index-v4.pkl  bm25-index-v5.pkl  bm25-index-v6.pkl  bm25-index-v7.pkl
notebooks/: Ingestion.ipynb  Retrieval&Generation.ipynb
